--- a/KriddieFolder/ANTE_moreGeomorph_2022-02-16.Rmd
+++ b/KriddieFolder/ANTE_moreGeomorph_2022-02-16.Rmd
@@ -23,22 +23,48 @@ library(geosphere)
 ##Geomorph Data
 make a different data frame with rest of the geomorphdata
 ```{r read in data}
-df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-02-16.csv"))
+df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-02-18.csv"))
 df_prediction$X <-NULL
 ```
 
 ```{r x and w and d, echo=FALSE}
 XWD <- read.csv(here::here("/Geomorphology/Atenas/Antenas_Geomorph_2022-01-28.csv"))
 
-#this is used to flip upstream to downstream, it's not necessary here, but I'm saving it in case I need it
-#XWD_x<- XWD[,c("x")] 
-#XWD_x <- sort(XWD_x, decreasing = TRUE)
-#XWD$x <- NULL
-#XWD$x <- XWD_x
-#rm(XWD_x)
-###
-
 XWD <- XWD[,c("lon","lat","x","d","w","ele","notes")]
+
+#oh what rotten luck. XWD data was collected downstream to upstream and df_prediction is opposite. Let use right this wrong
+
+XWD <- XWD[order(XWD$x),]
+XWD$x_diff <- NA
+
+for(i in 1:nrow(XWD)) {       # for-loop over rows
+  if (i == 1) {
+    XWD$x_diff[i] <- 0
+  } else {
+    XWD[i,"x_diff"] <-   XWD[i,"x"] - XWD[i-1,"x"]
+  }
+}
+
+XWD <- XWD[order(-XWD$x),]
+XWD$x_new <- NA
+for(i in 1:nrow(XWD)) {       # for-loop over rows
+  if (i == 1) {
+    XWD$x_new[i] <- 0
+  } else {
+    XWD[i,"x_new"] <-   XWD[i-1,"x_diff"] + XWD[i-1,"x_new"]
+  }
+}
+#great. now get rid of the stuff you don't want
+XWD <- XWD[,c("lon","lat","x_new","d","w","ele","notes")]
+names(XWD)[names(XWD) == 'x_new'] <- 'x'
+
+
+```
+
+now we snap XWD data to prediction
+
+```{r snap XDW, echo=FALSE}
+
 XWD_1 <- XWD %>%drop_na(lon)
 
 x <- SpatialPoints(XWD_1[,c(1:2)])
@@ -54,7 +80,6 @@ coords_df <- snap_df@coords
 pred <- as.data.frame(coords_df)
 XWD_1$lon_fit <- pred$lon
 XWD_1$lat_fit <- pred$lat
-#XWD_1 <- full_join(XWD,XWD_1,by=c("lon","lat","x","d","w","ele","notes"))
 XWD_1 <- full_join(XWD[,c("x","d","w","notes")],XWD_1[,c("lon_fit","lat_fit","x","d","w","notes")],by=c("x","d","w","notes"))
 
 df_prediction_1 <- full_join(df_prediction,XWD_1,by=c("lon_fit","lat_fit"))
@@ -66,8 +91,6 @@ df_prediction_1 <- unique(df_prediction_1)
 We've snapped in the waypoints collected while sampling x/width/depth, but there are many points in between don't have corresponding lat/lon/ele. So how to fix these gaps?
 
 
-#distance =
-
 Our tools are dist (modeled) and x (measured). Some x are already associated with dist we need to associate all xs with distance. 
 
 If we can identify the xs assiciated with distance, we can then calcualte the difference between each each one. Then calcualte the ratio of x inbetween and total difference
@@ -76,13 +99,26 @@ do the same with the difference between the distance assciated with x
 
 then see wich ratio is the closest --> link them up
 
-(x_x-x_1)/(x_2 - x_1) = column A
-(dist_2 - dist_1)*column A + dist_1 = column B
+##do this:
+if pt1 and pt2 are known values of x, and pt-btw is known dist but unknown x, then:
 
-Then identify closest dist to column B
+(Dist[pt-btw] - Dist[pt1])/(Dist[pt2] - Dist[pt1]) = (unknown - x[pt1])/(x[pt2] - x[pt1])
+
+unknown = (Dist[pt-btw] - Dist[pt1])/(Dist[pt2] - Dist[pt1])*(x[pt2] - x[pt1]) + x[pt1]
+
+##but how do that in a loop?
+key to this is being able idntify the next known x in between NAs.
 
 
 ```{r dist and x, echo=FALSE}
+df_prediction_1$x_pred <- NA
+for(i in 1:nrow(df_prediction_1)) {       # for-loop over rows
+  if (is.na(df_prediction_1[i,"x"]) == FALSE) {
+    df_prediction_1$x_pred[i] <- df_prediction_1$x[i]
+  } else {
+    df_prediction_1$x_pred[i] <- "try"
+  }
+}
 
 ```
 
